# NLLB-to-Icecast

./: .gitignore  DOCKER_SETUP.md  DOPPLER_SETUP.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  API_USAGE.md  Dockerfile  Dockerfile.dev  pyproject.toml
backend/src/nllb_to_icecast/: api_gateway.py  audio_translation_orchestrator.py  run_api.py  run_production.py
backend/src/nllb_to_icecast/config/: settings.py
backend/src/nllb_to_icecast/processing/: nllb_translator.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  FRONTEND_README.md  package-lock.json  package.json  svelte.config.js
frontend/src/routes/: +page.svelte
nginx/: nginx.conf
scripts/: run-dev.sh  run-prod.sh
src/nllb_to_icecast/: audio_translation_orchestrator.py  whisper_capture.py
src/nllb_to_icecast/audio/: capture.py
src/nllb_to_icecast/processing/: transcription.py
