[project]
name = "nllb-to-icecast"
version = "0.1.0"
description = "Uses NLLB to generate a streamable audio file from text"
authors = [
    { name = "Ryan Davis", email = "ryancraigdavis@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "loguru>=0.7.3",
    "numpy>=2.3.1",
    "sounddevice>=0.5.2",
]
